[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 61.2.0",
  "setuptools-scm >= 6.3.2",
  "wheel >= 0.37.0",
]
[project]
name = "wipplpy"
description = "Python package for the Wisconsin Plasma Physics Laboratory"
dynamic = [
  "version",
]
requires-python = ">=3.10"
dependencies = [
  "numpy >= 1.24.0",
]
[project.optional-dependencies]
tests = [
  "pytest >= 8.0.0",
  "nox >= 2024.4.15",
]

[tool.codespell]
skip = "*.png"
ignore-words-list = """
ned,
tru"""

[tool.ruff]
target-version = "py310"
extend-select = [
  "A", # flake8-builtins
  "C4", # flake8-comprehensions
  "FBT003", # flake8-boolean-trap
  "ISC", # flake8-implicit-str-concat
  "PLC", # pylint convention
  "PLE", # pylint errors
  "PLR", # pylint refactorings
  "PLW", # pylint warnings
  "SIM", # flake8-simplify
  "UP", # pyupgrade
  "RUF200", # invalid-pyproject-toml
]
ignore = [
  "E501", # line-too-long
]
